--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,5 +3,8 @@ require:
   - rubocop-performance
   - rubocop-rails
 
+Metrics/BlockLength:
+  Max: 50 # default 50
+
 Style/Documentation:
   Enabled: false
