--- a/.github/workflows/test_rubocop.yml
+++ b/.github/workflows/test_rubocop.yml
@@ -18,5 +18,5 @@ jobs:
         uses: reviewdog/action-rubocop@v2
         with:
           rubocop_version: gemfile
-          rubocop_extensions: rubocop-rails:gemfile rubocop-rspec:gemfile
+          rubocop_extensions: rubocop-rails:gemfile rubocop-rspec:gemfile  rubocop-performance:gemfile
           reporter: github-pr-review # Default is github-pr-check
