rubocop_flags を設定 #9

--- a/.github/workflows/test_rubocop.yml
+++ b/.github/workflows/test_rubocop.yml
@@ -21,3 +21,4 @@ jobs:
           rubocop_extensions: rubocop-rails:gemfile rubocop-rspec:gemfile  rubocop-performance:gemfile
           reporter: github-pr-review # Default is github-pr-check
           fail_on_error: true
+          rubocop_flags: --fail-level=warning
