github_token を明示 #9

--- a/.github/workflows/test_rubocop.yml
+++ b/.github/workflows/test_rubocop.yml
@@ -22,3 +22,4 @@ jobs:
           reporter: github-pr-review # Default is github-pr-check
           fail_on_error: true
           rubocop_flags: --fail-level=warning
+          github_token: ${{ secrets.github_token }}
